spade-tests/src/snapshots/spade_tests__typeinference__reading_from_tuple_members_is_an_error.snap
---
source: spade-tests/src/typeinference.rs
---
use std::ports::read_mut_wire;

fn takes_normal(x: bool, y: int<3>) -> bool __builtin__

entity uut(val: &mut (bool, int<3>)) -> bool {
    let x = inst read_mut_wire(val#0);
    let y = inst read_mut_wire(val#1);
    takes_normal(x, y)
}


error: Attempt to use tuple indexing on non-tuple
  ┌─ testinput:6:32
  │
5 │ entity uut(val: &mut (bool, int<3>)) -> bool {
  │                 ------------------- Type &mut (bool, int<3>) inferred here
6 │     let x = inst read_mut_wire(val#0);
  │                                ^^^-- Because this is a tuple index
  │                                │   
  │                                expected tuple, got &mut (bool, int<3>)


